fix(m3:tooltip): don't change global layout when not visible

--- a/src/m3/tooltip.css
+++ b/src/m3/tooltip.css
@@ -15,7 +15,8 @@
   z-index: 9999;
 }
 /* TODO: grow animation */
-:host(:not([visible])) {
+:host(:not(:--visible)) {
   opacity: 0;
   visibility: hidden;
+  inset: unset !important;
 }
